feat(JUDGE): - whoWin() is indit who won feat(Bot): - checkCellInMap() checking cell in map - diffXY() colculation deltaX and deltaY end return max and min of X Y - clearAround() remove cells around of ship - printMap() for logging after shoot - fix(JUDGE): just WHOWIN???