@@ -1,6 +1,5 @@
 import java.text.MessageFormat;
 import java.util.*;
-import java.util.List;
 
 public class MODELS {
     Player player = new Player();
@@ -26,7 +25,7 @@ abstract class APlayer {
         Object cell = this.enemy.pool.pool.get(x).get(y);
         System.out.println(MessageFormat.format("{0} shoot x:{1} y:{2}", this.name, x, y));
         if (cell instanceof Ship) {
-            int result = ((Ship) cell).getDamage();
+            int result = ((Ship) cell).getDamage(pool);
             enemy.poolFrame.damageCell(x, y, result);
             System.out.println("Result: " + result);
             return result;
@@ -65,46 +64,50 @@ class Bot extends APlayer {
         int x = target.get(0);
         int y = target.get(1);
         int result = shoot(x, y);
+        hunter.removeMapCell(x, y);
         hunter.updateTargetMap(x, y, result);
+        if (hunter.targetMap.isEmpty()) System.out.println("STOOOOOOP!");
         return result;
     }
 
     class HUNTER {
-        private int huntingMode = 1; 
-        private List<Integer> lastHit = new ArrayList<>();
+        private int huntingMode = 1;
+        private List<List<Integer>> lastHits = new ArrayList<>();
         private List<List<Integer>> possibleTargets = new ArrayList<>();
-        private int lastShotResult = 0; 
+        private int lastShotResult = 0;
         private HashMap<Integer, List<Integer>> targetMap = new HashMap<>();
 
-        HUNTER(){
+        HUNTER() {
             generateTargetMap();
         }
 
         public void updateTargetMap(int x, int y, int result) {
             lastShotResult = result;
 
-            if (result == 2) { 
-                if (huntingMode == 1) { 
-                    huntingMode = 2; 
-                    lastHit = Arrays.asList(x, y); 
-                    generatePossibleTargets(x, y); 
-                } else if (huntingMode == 2 || huntingMode == 3) { 
-                    huntingMode = 3; 
-                    lastHit = Arrays.asList(x, y); 
-                    filterPossibleTargets(x, y); 
+            if (result == 2) {
+                if (huntingMode == 1) {
+                    huntingMode = 2;
+                    lastHits.add(new ArrayList<>(List.of(x, y)));
+                    generatePossibleTargets(x, y);
+                } else if (huntingMode == 2 || huntingMode == 3) {
+                    huntingMode = 3;
+                    lastHits.add(Arrays.asList(x, y));
+                    generatePossibleTargets(x, y);
                 }
-            } else if (result == 1) { 
-                if (huntingMode == 3) { 
-                    huntingMode = 2; 
+            } else if (result == 1) {
+                if (huntingMode == 3) {
+                    huntingMode = 2;
                 }
-            } else if (result == 3) { 
-                huntingMode = 1; 
-                lastHit.clear(); 
-                possibleTargets.clear(); 
+            } else if (result == 3) {
+                huntingMode = 1;
+                lastHits.add(Arrays.asList(x, y));
+                clearAround();
+                lastHits.clear();
+                possibleTargets.clear();
             }
         }
 
-        private void generateTargetMap(){
+        private void generateTargetMap() {
             for (int i = 0; i < 10; i++) {
                 List<Integer> line = new ArrayList<>();
                 for (int j = 0; j < 10; j++) {
@@ -114,7 +117,7 @@ class Bot extends APlayer {
             }
         }
 
-        private List<Integer> getRandomXY(){
+        private List<Integer> getRandomXY() {
             Random r = new Random();
             List<Map.Entry<Integer, List<Integer>>> entries = new ArrayList<>(targetMap.entrySet());
             Map.Entry<Integer, List<Integer>> re = entries.get(r.nextInt(entries.size()));
@@ -123,69 +126,124 @@ class Bot extends APlayer {
             return new ArrayList<>(List.of(x, y));
         }
 
-        private void removeCell(int x, int y){
+        private void removeMapCell(int x, int y) {
             targetMap.get(x).remove(Integer.valueOf(y));
-            if(targetMap.get(x).isEmpty()){
-                targetMap.remove(x);
-            }
+            if (targetMap.get(x).isEmpty()) targetMap.remove(x);
+        }
+
+        private void removeTargetCell(int x, int y) {
+            possibleTargets.remove(new ArrayList<>(List.of(x, y)));
         }
 
         private void generatePossibleTargets(int x, int y) {
-            possibleTargets.clear(); 
-            int[][] directions = {{1, 0}, {-1, 0}, {0, 1}, {0, -1}}; 
+            int[][] directions = {{1, 0}, {-1, 0}, {0, 1}, {0, -1}};
 
-            for (int[] dir : directions) { 
-                int newX = x + dir[0];
-                int newY = y + dir[1];
+            if (lastHits.size() > 1) {
+                possibleTargets.clear();
+                List<Integer> diff = diffXY();
+                int lX1 = diff.get(0);
+                int lX2 = diff.get(1);
+                int lY1 = diff.get(2);
+                int lY2 = diff.get(3);
 
-                if (newX >= 0 && newX < 10 && newY >= 0 && newY < 10) { 
-                    possibleTargets.add(Arrays.asList(newX, newY));
+                if (lX1 - lX2 != 0) {
+                    int nXmin = lX2 - 1;
+                    int nXmax = lX1 + 1;
+                    if (checkCellInMap(nXmax, y)) possibleTargets.add(new ArrayList<>(List.of(nXmax, y)));
+                    if (checkCellInMap(nXmin, y)) possibleTargets.add(new ArrayList<>(List.of(nXmin, y)));
+                } else if (lY1 - lY2 != 0) {
+                    int nYmin = lY2 - 1;
+                    int nYmax = lY1 + 1;
+                    if (checkCellInMap(x, nYmax)) possibleTargets.add(new ArrayList<>(List.of(x, nYmax)));
+                    if (checkCellInMap(x, nYmin)) possibleTargets.add(new ArrayList<>(List.of(x, nYmin)));
+                }
+            } else {
+                for (int[] dir : directions) {
+                    int newX = x + dir[0];
+                    int newY = y + dir[1];
+                    if (newX >= 0 && newX < 10 && newY >= 0 && newY < 10) {
+                        if (checkCellInMap(newX, newY)) possibleTargets.add(Arrays.asList(newX, newY));
+                    }
                 }
             }
         }
 
-
-        private void filterPossibleTargets(int x, int y) {
-            if (possibleTargets.isEmpty()) return; 
-
-            int prevX = lastHit.get(0);
-            int prevY = lastHit.get(1);
-
-
-            int dx = x - prevX; 
-            int dy = y - prevY;
-
-            List<List<Integer>> newTargets = new ArrayList<>();
-            for (List<Integer> target : possibleTargets) {
-                int tx = target.get(0);
-                int ty = target.get(1);
-
-
-                if ((dx != 0 && tx - x == dx) || (dy != 0 && ty - y == dy)) { 
-                    newTargets.add(Arrays.asList(tx, ty)); 
-                }
-            }
-            possibleTargets = newTargets; 
-        }
-
-
-        public List<Integer> getNextTarget() {
-            if (huntingMode == 1) { 
+        private List<Integer> getNextTarget() {
+            if (huntingMode == 1) {
                 System.out.println(name + " get random xy");
-                List<Integer> grxy = getRandomXY(); 
+                List<Integer> grxy = getRandomXY();
                 int x = grxy.getFirst();
                 int y = grxy.getLast();
-                removeCell(x, y); 
-                return Arrays.asList(x, y); 
-            } else if (huntingMode == 2 || huntingMode == 3) { 
-                if (!possibleTargets.isEmpty()) { 
-                    return possibleTargets.remove(0); 
-                } else { 
+                return Arrays.asList(x, y);
+            } else if (huntingMode == 2 || huntingMode == 3) {
+                if (!possibleTargets.isEmpty()) {
+                    return possibleTargets.remove(0);
+                } else {
                     huntingMode = 1;
-                    return getNextTarget(); 
+                    return getNextTarget();
                 }
             }
             return Arrays.asList(0, 0);
+        }
+
+        private boolean checkCellInMap(int x, int y) {
+            if (targetMap.containsKey(x)) {
+                if (targetMap.get(x).contains(y)) {
+                    return true;
+                }
+                return false;
+            }
+            return false;
+        }
+
+        private List<Integer> diffXY() {
+            List<Integer> allX = new ArrayList<>();
+            List<Integer> allY = new ArrayList<>();
+
+            for (List<Integer> cell : lastHits) {
+                allX.add(cell.getFirst());
+                allY.add(cell.getLast());
+            }
+            System.out.println(lastHits);
+            int maxX = allX.stream().max(Integer::compare).get();
+            int minX = allX.stream().min(Integer::compare).get();
+            int maxY = allY.stream().max(Integer::compare).get();
+            int minY = allY.stream().min(Integer::compare).get();
+
+            return new ArrayList<>(List.of(maxX, minX, maxY, minY));
+        }
+
+        private void clearAround() {
+            List<Integer> diff = new ArrayList<>(diffXY());
+            System.out.println("DIFF: " + diff);
+            int maxX = diff.get(0);
+            int minX = diff.get(1);
+            int maxY = diff.get(2);
+            int minY = diff.get(3);
+
+            for (int x = minX - 1; x < maxX + 2; x++) {
+                for (int y = minY - 1; y < maxY + 2; y++) {
+                    if (!checkCellInMap(x, y)) {
+                        continue;
+                    }
+                    System.out.println("clearAround remove:" + x + " " + y);
+                    removeMapCell(x, y);
+                }
+            }
+        }
+
+        private void printMap() {
+            for (int x = 0; x < 10; x++) {
+                System.out.print(x + ": ");
+                for (int y = 0; y < 10; y++) {
+                    if (checkCellInMap(x, y)) {
+                        System.out.print(" O");
+                    } else {
+                        System.out.print(" X");
+                    }
+                }
+                System.out.println("|");
+            }
         }
     }
 }
@@ -340,10 +398,11 @@ class Ship {
         }
     }
 
-    public int getDamage() {
+    public int getDamage(Pool pool) {
         this.hp -= 1;
         if (this.hp == 0) {
             System.out.println("Sunk!");
+            pool.ships.remove(this);
             return 3;
         } else {
             System.out.println("Get hit!");
